[package]
name = "todo-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version= "1", features = ["fs"], optional = true }
thiserror = "1"
async-std = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["persist"]
persist = ["dep:tokio"]
