[package]
name = "todo-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version= "1", features = ["fs"], optional = true }
thiserror = "1"
async-std = "1"
chrono = { version = "0.4", features = ["serde"] }
windows = { version = "0.48", features = ["Win32_Networking_WinSock"] }
execute = "0.2"
typenum = "1.16"
mysql_async = "0.32"

[features]
default = ["persist"]
persist = ["dep:tokio"]
